--- a/firekid/layouts/partials/contributions_graph.html
+++ b/firekid/layouts/partials/contributions_graph.html
@@ -2,7 +2,13 @@
 <style>
   /* set the CSS */
 
-  .line {
+  .contributionLine {
+    fill: none;
+    stroke: green;
+    stroke-width: 2px;
+  }
+
+  .valuationLine {
     fill: none;
     stroke: steelblue;
     stroke-width: 2px;
@@ -13,7 +19,7 @@
     text-align: center;
     color: black;
     width: 100px;
-    height: 28px;
+    height: 56px;
     padding: 2px;
     font: 12px sans-serif;
     background: lightsteelblue;
@@ -40,11 +46,16 @@
   // var x = d3.scaleBand().range([0, width]).padding(0.4);
 
 
-  // define the line
-  var valueline = d3.line()
-    .curve(d3.curveStepAfter)
-    .x(function (d) { return x(d.date); })
-    .y(function (d) { return y(d.amount); });
+
+  var contributionLineFromJson = d3.line()
+      //.curve(d3.curveStepAfter)
+      .x(function (d) { return x(d.date); })
+      .y(function (d) { return y(d.totalContribution); });
+
+  var valuationLineFromJson = d3.line()
+      //.curve(d3.curveStepAfter)
+      .x(function (d) { return x(d.date); })
+      .y(function (d) { return y(d.overallValue); });
 
   var svg = d3.select("#my_dataviz")
     .append("svg")
@@ -53,11 +64,13 @@
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
   //Read the data
-  {{ $url:= (printf "%s%s%s" "data/accounts/" .File.TranslationBaseName "/jisa/valuations.csv") }}
+  {{ $accountName:= printf "%s" .File.BaseFileName }}
+  {{ $url:= (printf "%s%s%s" "csv/accounts/" .File.TranslationBaseName "/jisa/contributions.csv") }}
   {{ $sep:= "," }}
 
-  var csvData = {{ getCSV $sep $url }}
-
+  var csvData = {{ getCSV $sep $url }};
+  
+  
   var cumulativeContributions = 0;
   // format the data
   csvData.forEach(function (d) {
@@ -68,9 +81,21 @@
     d.amount = cumulativeContributions;
   });
 
+  var jData = {{index .Site.Data.accounts $accountName}}.jisa.valuations.points 
+
+
+
+
+  jData.forEach(function (d) {
+    d.shortDate = d.date;
+    d.date = d3.timeParse("%Y-%m-%d")(d.date);
+  });
+
+  var monthlyData = jData.filter(function (x) {return x.date.getUTCDate()==1} )
+
   // Scale the range of the data
-  x.domain(d3.extent(csvData, function (d) { return d.date; }));
-  y.domain([0, d3.max(csvData, function (d) { return d.amount; })]);
+  x.domain(d3.extent(jData, function (d) { return d.date; }));
+  y.domain([0, d3.max(jData, function (d) { return d.overallValue; })]);
 
 
   // create a tooltip
@@ -90,26 +115,29 @@
 
   // Add the valueline path.
   svg.append("path")
-    .data([csvData])
-    .attr("class", "line")
-    .attr("d", valueline);
+    .data([jData])
+    .attr("class", "contributionLine")
+    .attr("d", contributionLineFromJson);
 
+  svg.append("path")
+    .data([monthlyData])
+    .attr("class", "valuationLine")
+    .attr("d", valuationLineFromJson);
 
   svg.selectAll("myCircles")
-    .data(csvData)
+    .data(monthlyData)
     .enter()
     .append("circle")
     .attr("fill", "steelblue")
     .attr("stroke", "none")
     .attr("cx", function (d) { return x(d.date) })
-    .attr("cy", function (d) { return y(d.amount) })
+    .attr("cy", function (d) { return y(d.overallValue) })
     .attr("r", 4)
     .on("mouseover", function (event, d) {
-      console.log(d.date)
       tooltip.transition()
         .duration(200)
         .style("opacity", .9);
-      tooltip.html(d.shortDate + "<br/>&pound;" + d.contribution)
+      tooltip.html(d.shortDate + "<br/>Value: &pound;" + d.overallValue + "<br/>Contrib: &pound;" + d.totalContribution)
         .style("left", (event.pageX) + "px")
         .style("top", (event.pageY - 28) + "px");
     })
@@ -119,7 +147,7 @@
         .style("opacity", 0);
     })
   // svg.selectAll(".bar")
-  //        .data(csvData)
+  //        .data(jData.valuations.points)
   //        .enter().append("rect")
   //        .attr("class", "bar")
   //        .attr("x", function(d) { return x(d.date); })
