--- a/firekid/layouts/accounts/single.html
+++ b/firekid/layouts/accounts/single.html
@@ -31,29 +31,17 @@
     {{- if not (.Param "disableAnchoredHeadings") }}
     {{- partial "anchored_headings.html" .Content -}}
     {{- else }}{{ .Content }}{{ end }}
-    <table>
-      <thead>
-        <tr>
-        <th>Date</th>
-        <th>Account</th>
-        <th>Amount</th>
-        </tr>
-      </thead>
-      <tbody>
-      {{ $url := (printf "%s%s%s" "data/accounts/" .File.TranslationBaseName "/jisa/contributions.csv") }}
-      {{ $sep := "," }}
-      {{ range $i, $r := getCSV $sep $url }}
-        {{ if ne $i 0 }}
-          <tr>
-            <td>{{ index $r 0 }}</td>
-            <td>{{ index $r 1 }}</td>
-            <td>{{ index $r 2 }}</td>
-          </tr>
-        {{ end }}
-      {{ end }}
-      </tbody>
-    </table>
+    
+    
+    <script src="https://d3js.org/d3.v7.js"></script>
+    <div id="my_dataviz"></div>
+
+    {{- partial "contributions_graph.html" . }}
+    {{- partial "contributions_table.html" . }}
+
   </div>
+
+    
   {{- end }}
 
   <footer class="post-footer">
