--- a/firekid/layouts/partials/contributions_graph.html
+++ b/firekid/layouts/partials/contributions_graph.html
@@ -14,7 +14,7 @@
 
   // set the dimensions and margins of the graph
   var margin = { top: 20, right: 20, bottom: 50, left: 70 },
-    width = 960 - margin.left - margin.right,
+    width = 720 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
   // parse the date / time
@@ -23,10 +23,12 @@
   // set the ranges
   var x = d3.scaleTime().range([0, width]);
   var y = d3.scaleLinear().range([height, 0]);
+  // var x = d3.scaleBand().range([0, width]).padding(0.4);
 
 
   // define the line
   var valueline = d3.line()
+    .curve(d3.curveStepAfter)
     .x(function (d) { return x(d.date); })
     .y(function (d) { return y(d.amount); });
 
@@ -59,6 +61,14 @@
     .data([csvData])
     .attr("class", "line")
     .attr("d", valueline);
+  // svg.selectAll(".bar")
+  //        .data(csvData)
+  //        .enter().append("rect")
+  //        .attr("class", "bar")
+  //        .attr("x", function(d) { return x(d.date); })
+  //        .attr("y", function(d) { return y(d.amount); })
+  //        .attr("width", x.bandwidth())
+  //        .attr("height", function(d) { return height - y(d.amount); });
 
   // Add the x Axis
   svg.append("g")
