cumulative contributions graph

--- a/firekid/layouts/partials/contributions_graph.html
+++ b/firekid/layouts/partials/contributions_graph.html
@@ -1,73 +1,73 @@
-
 <script src="https://d3js.org/d3.v7.js"></script>
-<style> /* set the CSS */
+<style>
+  /* set the CSS */
 
   .line {
     fill: none;
     stroke: steelblue;
     stroke-width: 2px;
   }
-  
-  </style>
+</style>
 <div id="my_dataviz"></div>
 
 <script>
 
   // set the dimensions and margins of the graph
-var margin = {top: 20, right: 20, bottom: 50, left: 70},
-  width = 960 - margin.left - margin.right,
-  height = 500 - margin.top - margin.bottom;
+  var margin = { top: 20, right: 20, bottom: 50, left: 70 },
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
 
-// parse the date / time
-var parseTime = d3.timeParse("%Y-%m-%d");
+  // parse the date / time
+  var parseTime = d3.timeParse("%Y-%m-%d");
 
-// set the ranges
-var x = d3.scaleTime().range([0, width]);
-var y = d3.scaleLinear().range([height, 0]);
+  // set the ranges
+  var x = d3.scaleTime().range([0, width]);
+  var y = d3.scaleLinear().range([height, 0]);
 
 
-// define the line
-var valueline = d3.line()
-  .x(function(d) { return x(d.date); })
-  .y(function(d) { return y(d.amount); });
-  
-var svg = d3.select("#my_dataviz")
-  .append("svg")
-  .attr("width", width + margin.left + margin.right)
-  .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-  .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+  // define the line
+  var valueline = d3.line()
+    .x(function (d) { return x(d.date); })
+    .y(function (d) { return y(d.amount); });
+
+  var svg = d3.select("#my_dataviz")
+    .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
   //Read the data
-  {{ $url := (printf "%s%s%s" "data/accounts/" .File.TranslationBaseName "/jisa/contributions.csv") }}
-  {{ $sep := "," }}
+  {{ $url:= (printf "%s%s%s" "data/accounts/" .File.TranslationBaseName "/jisa/contributions.csv") }}
+  {{ $sep:= "," }}
 
   var csvData = {{ getCSV $sep $url }}
 
-// format the data
-csvData.forEach(function(d) {
-  d.date = parseTime(d[0]);
-  d.amount = +d[1];
-  console.log(d)
-});
+  var cumulativeContributions = 0;
+  // format the data
+  csvData.forEach(function (d) {
+    cumulativeContributions = cumulativeContributions + (+d[1]);
+    d.date = parseTime(d[0]);
+    d.amount = cumulativeContributions;
+  });
 
-// Scale the range of the data
-x.domain(d3.extent(csvData, function(d) { return d.date; }));
-y.domain([0, d3.max(csvData, function(d) { return d.amount; })]);
+  // Scale the range of the data
+  x.domain(d3.extent(csvData, function (d) { return d.date; }));
+  y.domain([0, d3.max(csvData, function (d) { return d.amount; })]);
 
-// Add the valueline path.
-svg.append("path")
-  .data([csvData])
-  .attr("class", "line")
-  .attr("d", valueline);
+  // Add the valueline path.
+  svg.append("path")
+    .data([csvData])
+    .attr("class", "line")
+    .attr("d", valueline);
 
-// Add the x Axis
-svg.append("g")
-  .attr("transform", "translate(0," + height + ")")
-  .call(d3.axisBottom(x));
+  // Add the x Axis
+  svg.append("g")
+    .attr("transform", "translate(0," + height + ")")
+    .call(d3.axisBottom(x));
 
-// Add the y Axis
-svg.append("g")
-  .call(d3.axisLeft(y));
+  // Add the y Axis
+  svg.append("g")
+    .call(d3.axisLeft(y));
 
 
-  </script>
+</script>
