--- a/firekid/layouts/accounts/single.html
+++ b/firekid/layouts/accounts/single.html
@@ -40,14 +40,16 @@
         </tr>
       </thead>
       <tbody>
-      {{ $url := (printf "%s%s%s" "data/accounts/" .File.TranslationBaseName "/contributions.csv") }}
+      {{ $url := (printf "%s%s%s" "data/accounts/" .File.TranslationBaseName "/jisa/contributions.csv") }}
       {{ $sep := "," }}
       {{ range $i, $r := getCSV $sep $url }}
-        <tr>
-          <td>{{ index $r 0 }}</td>
-          <td>{{ index $r 1 }}</td>
-          <td>{{ index $r 2 }}</td>
-        </tr>
+        {{ if ne $i 0 }}
+          <tr>
+            <td>{{ index $r 0 }}</td>
+            <td>{{ index $r 1 }}</td>
+            <td>{{ index $r 2 }}</td>
+          </tr>
+        {{ end }}
       {{ end }}
       </tbody>
     </table>
